<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home_title"/>
    <item
        android:id="@+id/nav_buy"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/by_title"/>
    <item
        android:id="@+id/nav_ofers"
        android:icon="@drawable/ic_queue_black_24dp"
        android:title="@string/by_oferrs">
    </item>
    <item
        android:id="@+id/nav_notification"
       android:icon="@drawable/ic_add_alert_black_24dp"
        android:title="@string/by_notification">
    </item>
    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/by_more">
    </item>
</menu>